K8S/cert-manager-testing/nginx/nginx-deploy.yml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  namespace: "cert-manager-testing"
  name: "nginx"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "nginx"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "nginx"
    spec:
      volumes:
        - name: "nginx-config"
          configMap:
            name: "nginx-config"
        - name: "nginx-site-config"
          configMap:
            name: "nginx-site-config"
        - name: "nginx-site-html"
          configMap:
            name: "nginx-site-html"
      containers:
        - name: "nginx"
          image: "nginx:1.23.1"
          imagePullPolicy: "IfNotPresent"
          volumeMounts:
            - name: "nginx-config"
              mountPath: "/etc/nginx"
            - name: "nginx-site-config"
              mountPath: "/etc/nginx/conf.d"
            - name: "nginx-site-html"
              mountPath: "/var/nginx"
          ports:
            - name: "http"
              protocol: "TCP"
              containerPort: 80
          resources:
            requests:
              cpu: "10m"
              memory: "30Mi"
            limits:
              cpu: "10m"
              memory: "50Mi"
