K8S/cert-manager-testing/nginx/nginx-service.yml
apiVersion: "v1"
kind: "Service"
metadata:
  namespace: "cert-manager-testing"
  name: "nginx"
spec:
  selector:
    app.kubernetes.io/name: "nginx"
  ports:
    - name: "http"
      protocol: "TCP"
      port: 80
      targetPort: 80
