K8S/cert-manager-testing/nginx/nginx-ingress.yml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  namespace: "cert-manager-testing"
  name: "nginx"
  annotations:
    cert-manager.io/issuer: "test-ss-issuer"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts: ["testing.k3s"]
      secretName: "nginx-cert"
  rules:
    - host: "testing.k3s"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: "nginx"
                port:
                  number: 80
